favicon&metaデータ追加

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- フォールバック（任意だけど推奨） -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <!-- 検索エンジン用の説明 -->
+  <meta name="description" content="なにもの：リンクを共有してチーム診断！" />
+
+  <!-- Open Graph -->
+  <!-- <meta property="og:title" content="なにもの" />
+  <meta property="og:description" content="リンクを共有してチーム診断！" />
+  <meta property="og:image" content="https://your-domain.com/og/default.png" />
+  <meta property="og:url" content="https://your-domain.com/" />
+  <meta property="og:type" content="website" /> -->
+
+  <!-- Twitter Card -->
+   <!-- TODO:あとからドメイン登録 -->
+  <!-- <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="なにもの" />
+  <meta name="twitter:description" content="リンクを共有してチーム診断！" />
+  <meta name="twitter:image" content="https://your-domain.com/og/default.png" /> -->
+    <title>なにもの</title>
   </head>
   <body>
     <div id="root"></div>
