なにもの→ナニモノ？

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- 検索エンジン用の説明 -->
-  <meta name="description" content="なにもの：リンクを共有してチーム診断！" />
+  <meta name="description" content="ナニモノ？：リンクを共有してチーム診断！" />
 
   <!-- Open Graph -->
   <!-- <meta property="og:title" content="なにもの" />
@@ -25,7 +25,7 @@
   <meta name="twitter:title" content="なにもの" />
   <meta name="twitter:description" content="リンクを共有してチーム診断！" />
   <meta name="twitter:image" content="https://your-domain.com/og/default.png" /> -->
-    <title>なにもの</title>
+    <title>ナニモノ？</title>
   </head>
   <body>
     <div id="root"></div>
